--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<head>
+<head >
   <title>Tategaki</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id='header'>
+    <%= render :partial => 'layouts/header' %>
+  </div>
+  <div id='wrapper'>
+    <div id='menu'>
+      <%= render :partial => 'layouts/menu' %>
+    </div>
+    <div id='contents'><%= yield %></div>
+    <div class='clear'></div>
+  </div>
+  <div id='footer'>
+    <%= render :partial => 'layouts/footer' %>
+  </div>
 </body>
 </html>
