--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<ul class='menu'>
+<ul class='menu' data-role="listview">
   <li><%= link_to 'トップページ', root_url %></li>
   <li><%= link_to '説明', about_url %></li>
   <li><%= link_to 'ニュース', news_url %></li>
