add validation for post input etc..
Signed-off-by: FUKUI Osamu <ofukui@irubysystems.com>

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -2,4 +2,5 @@
   <li><%= link_to 'トップページ', root_url %></li>
   <li><%= link_to '説明', about_url %></li>
   <li><%= link_to 'ニュース', news_url %></li>
+  <li><%= link_to '投稿', posts_url %></li>
 </ul>
