--- a/app/views/layouts/_menu_mobile.html.erb
+++ b/app/views/layouts/_menu_mobile.html.erb
@@ -1,3 +1,4 @@
 &#xe6e2;<%= link_to 'トップページ', root_url, {:accesskey => '1'} -%><br />
 &#xe6e3;<%= link_to '解説', about_url, {:accesskey => '2'} -%><br />
 &#xe6e4;<%= link_to 'ニュース', news_url, {:accesskey => '3'} -%><br />
+&#xe6e5;<%= link_to '投稿', posts_url, {:accesskey => '4'} -%><br />
