--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,2 +1,45 @@
-<h2>縦書き広場</h1>
-<p>縦書きで表示してみよう</p>
+<%   %>
+        <div  class="metro">
+            <h1 class="start"></h1>
+            <div class="metro-sections">
+   
+                <div class="metro-section" id="section1">
+
+                    <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a>
+
+                    <div class="tile tile-double bg-color-pink">
+                        <div class="tile-icon-large">
+                             <img src="../assets/haikusample.jpg?body=1"> <span class="tate">たてがき</span>
+                        </div>
+                       
+                    </div>
+                    <div class="tile">
+                        <div class="tile-icon-large">
+                            <img src="../assets/haikusample.jpg?body=1">
+                        </div>
+                        <span class="tile-label tate">たてがき</span>
+                    </div>
+                    <div class="tile bg-color-yellow">
+                        <div class="tile-icon-large">
+                           <img src="../assets/haikusample.jpg?body=1">
+                        </div>
+                        <span class="tile-label tate">たてがき</span>
+                    </div>
+                        <div class="tile bg-color-orange">
+                        <div class="tile-icon-large">
+                           <img src="../assets/haikusample.jpg?body=1">
+                        </div>
+                        <span class="tile-label tate">たてがき</span>
+                    </div>
+                     <div class="tile bg-color-purple">
+                        <div class="tile-icon-large">
+                           <img src="../assets/haikusample.jpg?body=1">
+                        </div>
+                        <span class="tile-label tate">たてがき</span>
+                    </div>
+
+
+
+            </div>
+
+        </div>
