--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,5 +1,8 @@
-<ul class='menu' data-role="listview">
-  <li><%= link_to 'トップページ', root_url %></li>
-  <li><%= link_to '説明', about_url %></li>
-  <li><%= link_to 'ニュース', news_url %></li>
-</ul>
+ <nav>
+ <ul class="topmanu">
+  <li class="suru"><%= link_to 'たてがきする', about_url %></li>
+  <li class="sakuhin"><%= link_to 'ギャラリー', news_url %></li>
+</ul>   
+    
+    
+    
