--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,8 +1,8 @@
- <nav>
+<nav>
  <ul class="topmanu">
-  <li class="suru"><%= link_to 'たてがきする', about_url %></li>
-  <li class="sakuhin"><%= link_to 'ギャラリー', news_url %></li>
+  <li class="suru"><%= link_to 'たてがきを書く', about_url %></li>
+  <li class="sakuhin"><%= link_to 'たてがきを見る', news_url %></li>
 </ul>   
-    
+</nav>    
     
     
