--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,6 @@
 <%   %>
+<div id="titlelogo"><img src="../assets/tategakilogo.png?body=1" width="100" height="135"></div>
+
         <div  class="metro">
             <h1 class="start"></h1>
             <div class="metro-sections">
@@ -7,35 +9,37 @@
 
                     <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a>
 
-                    <div class="tile tile-double bg-color-pink">
-                        <div class="tile-icon-large">
-                             <img src="../assets/haikusample.jpg?body=1"> <span class="tate">たてがき</span>
+                       <div class="tile">
+                        <div class="tile-icon-large img01">
+                             <span class="tate">朝顔に　つるべとられて　もらい水</span>
                         </div>
-                       
                     </div>
-                    <div class="tile">
-                        <div class="tile-icon-large">
-                            <img src="../assets/haikusample.jpg?body=1">
+                       <div class="tile bg-color-orange">
+                        <div class="tile-icon-large img02">
+                             <span class="tate">秋深き　隣は何を　する人ぞ</span>
                         </div>
-                        <span class="tile-label tate">たてがき</span>
+                    </div>
+                    
+                    <div class="tile bg-color-pink">
+                        <div class="tile-icon-large img03">
+                             <span class="tate">秋深き　隣は何を　する人ぞ</span>
+                        </div>
                     </div>
                     <div class="tile bg-color-yellow">
-                        <div class="tile-icon-large">
-                           <img src="../assets/haikusample.jpg?body=1">
+                        <div class="tile-icon-large  img04">
+                             <span class="tate">赤とんぼ　筑波に雲も　なかりけり</span>
                         </div>
-                        <span class="tile-label tate">たてがき</span>
                     </div>
-                        <div class="tile bg-color-orange">
-                        <div class="tile-icon-large">
-                           <img src="../assets/haikusample.jpg?body=1">
+                        <div class="tile bg-color-green">
+                        <div class="tile-icon-large  img05">
+                             <span class="tate">秋空を　二つに断てり　椎大樹</span>
                         </div>
-                        <span class="tile-label tate">たてがき</span>
                     </div>
                      <div class="tile bg-color-purple">
-                        <div class="tile-icon-large">
-                           <img src="../assets/haikusample.jpg?body=1">
+                        <div class="tile-icon-large img06">
+                             <span class="tate">朝顔に　つるべとられて　もらい水</span>
                         </div>
-                        <span class="tile-label tate">たてがき</span>
+                        
                     </div>
 
 
