--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 <meta name="copyright" content="">
 <meta name="author" content="">
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  
+<link rel="Shortcut Icon" type="image/x-icon" href="../assets/favicon.ico?body=1">
+<link rel="icon" type="image/gif" href="../assets/favicon.gif?body=1">
 
 <%= stylesheet_link_tag "metro" %>
 <%= stylesheet_link_tag "site" %>
