--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,14 @@
 <%= stylesheet_link_tag "bootstrap" %>
 <%= stylesheet_link_tag "bootstrap-responsive" %>
 <%= stylesheet_link_tag "desgin" %>
+<%= stylesheet_link_tag "tate-style" %>
 
 <%= javascript_include_tag "jquery-1.7.2.min" %>
 <%= javascript_include_tag "jquery.mousewheel" %>
 <%= javascript_include_tag "bootstrap.min" %>
 <%= javascript_include_tag "metro" %>
+<link rel="Shortcut Icon" type="image/x-icon" href="../assets/favicon.ico?body=1">
+<link rel="icon" type="image/gif" href="../assets/favicon.gif?body=1">
 
   <style type="text/css">
         body {
