--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -39,14 +39,59 @@
 
 
   <div class="container">
-    <div id="menu">
-      <%= render :partial => 'layouts/menu' %>
-    </div>
   <div id='contents'><%= yield %></div>
   <div class='clear'></div>
   </div>
 たてがき言葉 | 俳句や短歌、川柳を投稿しよう！
-      <script type="text/javascript">
+<div id="titlelogo"><img src="../assets/tategakilogo.png?body=1" width="100" height="135"></div>
+
+        <div  class="metro">
+            <h1 class="start"></h1>
+            <div class="metro-sections">
+
+                <div class="metro-section" id="section1">
+
+                    <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a>
+
+                       <div class="tile">
+                        <div class="tile-icon-large img01">
+                             <span class="tate">朝顔に　つるべとられて　もらい水</span>
+                        </div>
+                    </div>
+                       <div class="tile bg-color-orange">
+                        <div class="tile-icon-large img02">
+                             <span class="tate">秋深き　隣は何を　する人ぞ</span>
+                        </div>
+                    </div>
+
+                    <div class="tile bg-color-pink">
+                        <div class="tile-icon-large img03">
+                             <span class="tate">秋深き　隣は何を　する人ぞ</span>
+                        </div>
+                    </div>
+                    <div class="tile bg-color-yellow">
+                        <div class="tile-icon-large  img04">
+                             <span class="tate">赤とんぼ　筑波に雲も　なかりけり</span>
+                        </div>
+                    </div>
+                        <div class="tile bg-color-green">
+                        <div class="tile-icon-large  img05">
+                             <span class="tate">秋空を　二つに断てり　椎大樹</span>
+                        </div>
+                    </div>
+                     <div class="tile bg-color-purple">
+                        <div class="tile-icon-large img06">
+                             <span class="tate">朝顔に　つるべとられて　もらい水</span>
+                        </div>
+
+                    </div>
+
+
+
+            </div>
+
+            </div>
+        <script type="text/javascript">
         $(function(){
             window.prettyPrint && prettyPrint();
         })
