--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,19 +4,18 @@
   <b>Title:</b>
   <%= @post.title %>
 </p>
-<div class="tate-area">
-  <% block = @post.body.split(/ /) %>
-  <div class="tate-line">
-    <%= block[0] %>
-  </div>
-  <div class="tate-line">
-    <%= block[1] %>
-  </div>
-  <div class="tate-line">
-    <%= block[2] %>
+<div  class="metro">
+  <div class="metro-sections"> 
+    <div class="metro-section" id="section1"> 
+      <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a> 
+      <div class="tile">
+        <div class="tile-icon-large img01">
+        <% @post.body.split(/ /).each_with_index do |block,i| %>
+        <span> <%= '　'*i + block %> </span>
+        <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
