--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,70 +1,109 @@
-<script type="text/javascript">
-   /* パラメータの設定 */
-   var params ={ 'tategaki' : { 'fontsize' : '14px' ,
-                'chars' : 28 , 
-                'lineInterval' : 0.6 , 
-                'auto' : true
-             } 
-   }; 
-   /* 初期化 & コンバート */
-   h2vconvert.init( params ); 
-</script>
-たてがき言葉 | 俳句や短歌、川柳を投稿しよう！
-<div id="titlelogo"><img src="../assets/tategakilogo.png?body=1" width="100" height="135"></div> 
+<div id="titlelogo"><img src="../assets/tategakilogo.png?body=1" width="100" height="135"
+  title="たてがき言葉 | 俳句や短歌、川柳を投稿しよう！"></div>
 <div  class="metro">
   <h1 class="start"></h1>
-  <div class="metro-sections"> 
-    <div class="metro-section" id="section1"> 
-      <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a> 
-      <div class="tile">
-        <div class="tile-icon-large img01">
-          <span id="tate">朝顔に</span>
-          <span id="tate">　　つるべとられて</span>
-          <span id="tate">　　　　もらい水</span>
-        </div>
-      </div>
-      <div class="tile bg-color-orange">
-        <div class="tile-icon-large img02">
-           <span class="tate">秋深き</span>
-           <span class="tate">　隣は何を</span>
-           <span class="tate">　　する人ぞ</span>
-        </div>
-      </div>
+  <div class="metro-sections">
+    <div class="metro-section" id="section1">
+      <a data-next="#section3" data-prior="#section2" href="#" class="next-section"></a>
 
-      <div class="tile bg-color-pink">
+      <% @posts.each_with_index do | post, i | %>
+       <% if i == 0 %>
+        <div class="tile">
+          <div class="tile-icon-large img01">
+          <% if post %>
+            <% post.body.split(/ /).each_with_index do |block,i| %>
+              <span> <%= '　'*i + block %> </span>
+            <% end %>
+          <% else %>
+            <span id="tate">赤い椿</span>
+            <span id="tate">　白い椿と</span>
+            <span id="tate">　　落ちにけり</span>
+          <% end %>
+          </div>
+        </div>
+       <% elsif i == 1 %>
+        <div class="tile bg-color-orange">
+          <div class="tile-icon-large img02">
+          <% if post %>
+            <% post.body.split(/ /).each_with_index do |block,i| %>
+              <span> <%= '　'*i + block %> </span>
+            <% end %>
+          <% else %>
+            <span id="tate">朝顔に</span>
+            <span id="tate">　つるべとられて</span>
+            <span id="tate">　　もらい水</span>
+          <% end %>
+          </div>
+        </div>
+
+       <% elsif i == 2 %>
+       <div class="tile bg-color-pink">
         <div class="tile-icon-large img03">
-           <span class="tate">秋深き</span>
-           <span class="tate">　隣は何を</span>
-           <span class="tate">　　する人ぞ</span>
+          <% if post %>
+            <% post.body.split(/ /).each_with_index do |block,i| %>
+              <span> <%= '　'*i + block %> </span>
+            <% end %>
+          <% else %>
+             <span class="tate">秋深き</span>
+             <span class="tate">　隣は何を</span>
+             <span class="tate">　　する人ぞ</span>
+          <% end %>
         </div>
-      </div>
-      <div class="tile bg-color-yellow">
+       </div>
+
+       <% elsif i == 3 %>
+       <div class="tile bg-color-yellow">
         <div class="tile-icon-large  img04">
-           <span class="tate">赤とんぼ</span>
-           <span class="tate">　筑波に雲も</span>
-           <span class="tate">　　なかりけり</span>
+          <% if post %>
+            <% post.body.split(/ /).each_with_index do |block,i| %>
+              <span> <%= '　'*i + block %> </span>
+            <% end %>
+          <% else %>
+             <span class="tate">赤とんぼ</span>
+             <span class="tate">　筑波に雲も</span>
+             <span class="tate">　　なかりけり</span>
+          <% end %>
         </div>
-      </div>
-        <div class="tile bg-color-green">
+       </div>
+
+       <% elsif i == 4 %>
+       <div class="tile bg-color-green">
         <div class="tile-icon-large  img05">
-           <span class="tate">秋空を</span>
-           <span class="tate">　二つに断てり</span>
-           <span class="tate">　　椎大樹</span>
+          <% if post %>
+            <% post.body.split(/ /).each_with_index do |block,i| %>
+              <span> <%= '　'*i + block %> </span>
+            <% end %>
+          <% else %>
+             <span class="tate">秋空を</span>
+             <span class="tate">　二つに断てり</span>
+             <span class="tate">　　椎大樹</span>
+          <% end %>
         </div>
-      </div>
-      <div class="tile bg-color-purple">
+       </div>
+
+       <% elsif i == 5 %>
+       <div class="tile bg-color-purple">
         <div class="tile-icon-large img06">
-          <span id="tate">朝顔に</span>
-          <span id="tate">　　つるべとられて</span>
-          <span id="tate">　　　　もらい水</span>
-        </div> 
-      </div>
-    </div> 
+          <% if post %>
+            <% post.body.split(/ /).each_with_index do |block,i| %>
+              <span> <%= '　'*i + block %> </span>
+            <% end %>
+          <% else %>
+            <span id="tate">朝顔に</span>
+            <span id="tate">　つるべとられて</span>
+            <span id="tate">　　もらい水</span>
+          <% end %>
+        </div>
+       </div>
+      <% end %>
+     <% end %>
+
+    </div>
   </div>
 </div>
 <script type="text/javascript">
   $(function(){
     window.prettyPrint && prettyPrint();
-  }) 
-  $(".metro").metro(); 
+  })
+  $(".metro").metro();
 </script>
