書くでフォームへ直接飛ぶ。見るの一覧化

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,1 @@
-第２回デザイナーxプログラマハッカソン @ukiferret & @iR3 <%=Time.now.year %>
+<a href='https://github.com/prog4designer/hackathon2nd/wiki' target='_blank' >第２回デザイナーxプログラマハッカソン</a> @yukiferret & @iR3 <%=Time.now.year %>
