--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
-  <div class="navbar navbar-fixed-top">
-     <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="./index.html">たてがき言葉</a>
-          <div class="nav-collapse collapse">
-             <h2 id="discription">俳句、短歌、和歌、川柳...</h2>
-          </div>
-        </div>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="/">たてがき言葉</a>
+      <div class="nav-collapse collapse">
+         <h2 id="discription">俳句、短歌、和歌、川柳...</h2>
       </div>
     </div>
+  </div>
+</div>
