--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,6 +1,6 @@
 <nav>
  <ul class="topmanu">
-  <li class="suru"><%= link_to 'たてがきを書く', posts_url %></li>
-  <li class="sakuhin"><%= link_to 'たてがきを見る', news_url %></li>
+  <li class="suru"><%= link_to 'たてがきを書く', new_post_path %></li>
+  <li class="sakuhin"><%= link_to '投稿一覧', posts_path %></li>
 </ul>
 </nav>
