--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
     <td><%= link_to('縦書', "posts/#{i+1}")%></td>
     <td><%= post.title %></td>
     <td><%= post.body %></td>
-    <td><%= post.created_at.strftime("%Y/%m/%d %H:%M:%S") %></td>
+    <td><%= post.created_at.localtime.strftime("%Y/%m/%d %H:%M:%S") %></td>
   </tr>
 <% end %>
 </table>
